<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort_name"
        android:title="@string/sort_name" />
    <item
        android:id="@+id/sort_pkg_name"
        android:title="@string/sort_pkg_name" />
    <item
        android:id="@+id/sort_signature"
        android:title="@string/sort_signature" />
    <item
        android:id="@+id/sort_app_size"
        android:title="@string/sort_app_size" />
    <item
        android:id="@+id/sort_app_size_desc"
        android:title="@string/sort_app_size_desc" />

</menu>
